welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value X
var T = new Array[Color](X)
                         ^Array1:4: error: not found: value X
X==getMondeHauteur()
^